--- a/app/webroot/css/css.css
+++ b/app/webroot/css/css.css
@@ -1,12 +1,12 @@
 body {
 	color: #333;
-	font-family: 'Open Sans', Verdana, Arial, sans-serif;
+	font-family: 'pt_sans_captionregular', Verdana, Arial, sans-serif;
 	font-size: 13px;
 	background-color: #BBBBBB;
 }
 
 h1, h2, h3, h4 {
-	font-family: 'Open Sans', Verdana, Arial, sans-serif;
+	font-family: 'pt_sans_captionregular', Verdana, Arial, sans-serif;
 	font-weight: 700;
 }
 
