--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -1,8 +1,10 @@
 body, html{
     width: 100%;
+    font-family: 'pt_sans_captionregular', Verdana, Arial, sans-serif;
+    font-size: 13px;
 }
 body{
-    background: #e5e9ec;
+    background: #e5e9ec!important;
 }
 #head-line, #menu{
     background-image: -webkit-gradient(
@@ -38,6 +40,8 @@ body{
     padding: 10px 20px 10px 0;
     text-align: center;
     text-decoration: none;
+    font-weight: bold;
+    font-size: 16px;
     color: #fff;
     text-shadow: 0 1px 0 #417199;
     border-right: 1px solid #e0ebef;
@@ -67,4 +71,85 @@ h3{
 }
 .page-content {
     padding: 0 10px;
+}
+#categorytree {
+    margin: 0;
+}
+.categorytree a {
+    font-size: 16px;
+    font-weight: normal;
+}
+.categorytree > li > a{
+    color: #333;
+    line-height: 1;
+    display: block;
+}
+.categorytree li {
+    list-style-type: none;
+}
+.catalog h3{
+    padding-bottom: 0;
+    font-weight: normal;
+    margin: 0;
+    line-height: 1;
+}
+#categorytree {
+    margin: 20px 0;
+    border-bottom: 1px solid #bfbfbf;
+}
+#categorytree ul {
+    display: none;
+}
+#categorytree > li > a {
+    padding: 15px 0;
+    line-height: 1;
+    border-top: 1px solid #bfbfbf;
+}
+#categorytree > li li a:hover {
+    color: #0173b0;
+}
+#categorytree > li li a{
+    display: block;
+    padding-top: 7px;
+    line-height: 1;
+}
+#categorytree > li li a:last-child {
+    padding-bottom: 15px;
+}
+#formsearch {
+    dislay: block;
+    width: 260px;
+    margin: 15px 0 0;
+    height: 30px;
+    border-radius: 30px;
+    border: 1px solid #d4d4d4;
+    background: #e0e2e5;
+    -webkit-box-shadow: inset 0px 4px 3px -2px rgba(0,0,0,0.2);
+    -moz-box-shadow: inset 0px 4px 3px -2px rgba(0,0,0,0.2);
+    box-shadow: inset 0px 4px 3px -2px rgba(0,0,0,0.2);
+}
+#formsearch #ProductSearch {
+    width: 170px;
+    padding: 5px;
+    margin: 5px 0 0 5px;
+    height: 10px;
+    color: #fff;
+    background: inherit;
+    border: none;
+    box-shadow: none;
+}
+#formsearch .search-btn {
+    border-radius: 30px!important;
+    padding: 4px 15px;
+    display: block;
+    float: right;
+    margin: 1px 1px 0 0;
+    border: none;
+    text-shadow: 0 1px 0 #417199;
+    color: #fff;
+    background-image: -o-linear-gradient(bottom, #a1c9e4 0%, #0e68b6 100%);
+    background-image: -moz-linear-gradient(bottom, #a1c9e4 0%, #0e68b6 100%);
+    background-image: -webkit-linear-gradient(bottom, #a1c9e4 0%, #0e68b6 100%);
+    background-image: -ms-linear-gradient(bottom, #a1c9e4 0%, #0e68b6 100%);
+    background-image: linear-gradient(to bottom, #a1c9e4 0%, #0e68b6 100%);
 }
