--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -22,6 +22,28 @@ body{
     padding: 10px 0;
     color: #fff;
 }
+#head-line {
+    position: relative;
+}
+#head-line div.reg {
+    width: 104px;
+    height: 38px;
+    background: url(../img/reg.png) right center no-repeat;
+    left: 50%;
+    position: absolute;
+    top: 0;
+    margin-left: -52px;
+    text-align: center;
+}
+#head-line div.reg a{
+    color: #fff;
+    display: block;
+    padding: 5px 0 0 0;
+    text-shadow: 1px -1px 0 #8c2017;
+}
+#head-line div.reg a:hover, #head-line div.reg a:focus {
+    text-decoration: none!important;
+}
 #logo{
     float: left;
     height: 60px;
@@ -172,4 +194,36 @@ h3{
     position: absolute;
     top: 8px;
     left: 10px;
+}
+.phones {
+    font-weight: normal;
+    font-size: 18px;
+    font-style: italic;
+}
+.phones img {
+    height: 16px;
+    float: left;
+    display: block;
+    margin: 2px 10px 0 0;
+}
+.cart {
+    text-align: center;
+    padding: 3px 0 10px;
+    background: #fff;
+    line-height: 1;
+    border-radius: 15px;
+    color: #323232;
+    display: block;
+}
+.cart:hover, .cart:focus {
+    text-decoration: none!important;
+}
+.cart h5{
+    line-height: 1;
+    color: #e0442f;
+    font-weight: normal;
+    font-size: 14px;
+}
+.cart img{
+    margin: 0 3px 0 0;
 }
