--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -202,6 +202,7 @@ h3{
     left: 10px;
 }
 .phones {
+    line-height: 1;
     font-weight: normal;
     font-size: 18px;
   /*  font-style: italic;*/
@@ -211,6 +212,16 @@ h3{
     float: left;
     display: block;
     margin: 2px 10px 0 0;
+}
+.phones p{
+    margin: 0 0 5px 0;
+}
+.phones a{
+    display: block;
+    margin: -2px 0 0;
+    padding: 0 0 0 30px;
+    font-size: 14px;
+    color: #323232;
 }
 .cart {
     text-align: center;
