--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -4,7 +4,7 @@ body, html{
     font-size: 13px;
 }
 body{
-    background-color: #e5e9ec!important;
+    background-color: #e7e9eb!important;
 }
 li {
     list-style-type: none!important;
@@ -205,23 +205,23 @@ h3{
     line-height: 1;
     font-weight: normal;
     font-size: 18px;
+    margin: -2px 0 0;
   /*  font-style: italic;*/
 }
 .phones img {
-    height: 16px;
+    height: 14px;
     float: left;
     display: block;
-    margin: 2px 10px 0 0;
+    margin: 2px 10px 0 4px;
 }
 .phones p{
     margin: 0 0 5px 0;
 }
 .phones a{
     display: block;
-    margin: -2px 0 0;
-    padding: 0 0 0 30px;
     font-size: 14px;
-    color: #323232;
+    color: #7c7c7c;
+    text-decoration: underline;
 }
 .cart {
     text-align: center;
@@ -286,11 +286,12 @@ h3{
     width: 940px;
     color: #fff;
     margin: 0 auto;
+    background: #3882c1;
 }
 #footer .container > div:last-child a{
     display: inline-block;
     margin: 0 7px 0 0;
 }
-.page-header, #page-content {
-    background: url(../img/bg.jpg) center top repeat-y;
+.container {
+    background: url(../img/bg.jpg) center bottom repeat-y;
 }
