New place for map

--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -131,6 +131,9 @@ h3{
 #callback:hover{
     text-decoration: none!important;
 }
+dd.map{
+    padding: 0 0 10px;
+}
 .page > .hider {
     display: none;
 }
